--- a/.github/workflows/appinspect-api.yml
+++ b/.github/workflows/appinspect-api.yml
@@ -26,5 +26,5 @@ jobs:
       - name: Upload Reports
         uses: actions/upload-artifact@v4
         with:
-          name: reports
-          path: reports/
+          name: AppInspect_response.html
+          path: AppInspect_response.html
